--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
+    "motion": "^12.15.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
